--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -26,7 +26,7 @@ jobs:
             -   name: Create zip archive
                 run: |
                     cd dist
-                    zip -r ../mention-things.zip .
+                    zip -r ../plugin.zip .
 
             -   name: Create release
                 env:
@@ -37,4 +37,4 @@ jobs:
                     gh release create "$tag" \
                       --title="$tag" \
                       --draft \
-                      mention-things.zip dist/main.js dist/manifest.json
+                      plugin.zip dist/main.js dist/styles.css dist/manifest.json
