--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -1,6 +1,7 @@
 name: Release Obsidian plugin
 
 on:
+    workflow_dispatch:
     push:
         tags:
             # Trigger when a new tag is pushed
