--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,6 +7,9 @@ on:
             # Trigger when a new tag is pushed
             - "*"
 
+permissions:
+    contents: write
+
 jobs:
     build:
         runs-on: ubuntu-latest
