--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -30,7 +30,7 @@ jobs:
             -   name: Create zip archive
                 run: |
                     cd dist
-                    zip -r ../plugin.zip .
+                    zip -r ../pst-personal-rest-api.zip .
 
             -   name: Create release
                 env:
@@ -41,4 +41,4 @@ jobs:
                     gh release create "$tag" \
                       --title="$tag" \
                       --draft \
-                      plugin.zip dist/main.js dist/styles.css dist/manifest.json
+                      pst-personal-rest-api.zip dist/main.js dist/styles.css dist/manifest.json
